fix: make scrolling on mobile enabled

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  height: 620px;
+
+  @media (max-width: 768px) {
+    height: auto;
+  }
+}
